[package]
name = "arcus"
version = "0.1.0"
edition = "2021"

[lib]
name = "arclib"
path = "src/lib.rs"

[[bin]]
name = "arcus"
path = "src/main.rs"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
#cortex-m-rtic = "1.0.0"
cortex-m-rtic = { git = "https://github.com/LU15W1R7H/cortex-m-rtic" }
systick-monotonic = "1.0.0"
alloc-cortex-m = "0.4.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
rp2040-boot2 = "0.2.0"

rp-pico = "0.3.0"
pio = "0.2.0"
infrared = "0.14.1"

embedded-hal = "0.2.7"
embedded-time = "0.12.1"

fixed = "1.15.0"
rand = { version = "0.8.5", default-features = false, features = [ "small_rng" ] }
